2012-05-14 Philippe Roussel

	* Song.m
	Proper isEqual compare.

	* PlaylistController.m
	Fix playlist and bundle loading.

2012-05-13 Philippe Roussel

	* Playlist.m
	* Song.m
	* Bundles/Esound/EsoundPreference.m
	* Bundles/OSS/OSS.h
	* Bundles/WindowsMedia/CWMFile.cpp
	Fix

	* Bundles/Esound/Esound.m
	Conform to new protocol

	* Bundles/Ogg/Ogg.m
	Endianness to native.

2012-05-13 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Bundles/Sndio/Sndio.[h|m]
	handle media-endianness given in the media bundles.

2012-05-13 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Bundles/Timidity/Timidity.m
	Default eniannessd needs to be native, otherwise
	macppc play garbage
	Use relative name to find timidity binary
	Switch buffer size from 65536 to DEFAULT_BUFFER_SIZE
	defined in Output.h

2012-05-13 Riccardo Mottola <rm@gnu.org>

	* Bundles/FLAC/FLAC.m
	* Bundles/Mod/Mod.m
	* Bundles/Musepack/Musepack.m
	Set default endianness to native.

2012-05-13 Riccardo Mottola <rm@gnu.org>

	* Bundles/WindowsMedia/WindowsMedia.m
	Set endianness to native.

2012-05-13 Riccardo Mottola <rm@gnu.org>

	* Player.h
	* Player.m
	* Bundles/ALSA/ALSA.h
	* Bundles/ALSA/ALSA.m
	* Bundles/AO/ao.m
	* Bundles/AudioFile/AudioFile.m
	* Bundles/MP3/MP3.m
	* Bundles/OSS/OSS.h
	* Bundles/OSS/OSS.m
	* Bundles/WindowsMedia/WindowsMedia.m
	* Frameworks/Cynthiune/Format.h
	* Frameworks/Cynthiune/Output.h
	Set media-endianness in media and output bundle.

2012-05-09 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* GNUmakefile
        fix detection of OpenBSD in order to build the Sndio bundle

2012-05-09 Riccardo Mottola <rm@gnu.org>

	* PlaylistController.m
	Remove hacks and use runModalForTypes.

2012-05-09 Riccardo Mottola <rm@gnu.org>

	* PlaylistController.h
	* PlaylistController.m
	* Cynthiune.gorm
	* English.lproj/Localizable.strings
	Implement open playlist

2012-05-08 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
