@@ -1,5 +1,11 @@
 2012-05-14 Philippe Roussel
 
+	* Bundles/Timidity/Timidity.m
+	  do not crash when loading a .mid file
+	  without having timidity installed
+
+2012-05-14 Philippe Roussel
+
 	* Song.m
 	Proper isEqual compare.
 
